# silt

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
doc/: api_cpp.rst  api_python.rst  conf.py  design.rst  index.rst  usage.rst
example/: rng.py  test.py
lib/: CMakeLists.txt
lib/my_cuda_lib/: my_header.hpp  my_source.cu
python/: CMakeLists.txt
python/my_bindings/: __init__.py
python/silt/: __init__.py  util.py
python/source/: _module.cpp  component.cpp  glm.hpp  interop.hpp  module.cpp  op.cpp  shape.cpp  tensor.cpp  util.cpp
source/: CMakeLists.txt
source/silt/: silt.hpp
source/silt/core/: error.hpp  operation.hpp  shape.hpp  silt.hpp  tensor.hpp  types.hpp  vector.hpp  view.hpp
source/silt/op/: common.cu  common.hpp  gather.hpp  normal.hpp
