[build-system]
requires = ["scikit-build-core >=0.4.3"]
build-backend = "scikit_build_core.build"

[project]
name = "silt"
version = "1.0.0"
description = "Super Lightweight Tensors"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["silt", "tensor", "cuda", "gpu", "erosiv"]
# dependencies = []

authors = [
  {name = "Nicholas McDonald", email = "nick@erosiv.studio"},
]
maintainers = [
  {name = "Nicholas McDonald", email = "nick@erosiv.studio"},
]

[project.urls]
Homepage = "https://erosiv.studio"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/erosiv/silt.git"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"